[gd_scene load_steps=5 format=3 uid="uid://cps2phoa7jo1h"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_dm6oy"]
[ext_resource type="FontFile" uid="uid://diw7trdm1jgvs" path="res://fonts/lemon_milk/LEMONMILK-Regular.otf" id="2_kj1rw"]
[ext_resource type="FontFile" uid="uid://bj8s225aow6x7" path="res://fonts/Noto_Sans_JP/NotoSansJP-VariableFont_wght.ttf" id="3_m4keo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_viwln"]
bg_color = Color(0.945011, 0.945011, 0.945011, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0, 0, 0, 0.0392157)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Card" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 75)
theme_override_styles/panel = SubResource("StyleBoxFlat_viwln")
script = ExtResource("1_dm6oy")

[node name="TopVbox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 5.0
offset_top = 5.0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="RankLabel" type="Label" parent="TopVbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_kj1rw")
theme_override_font_sizes/font_size = 14
text = "A"
horizontal_alignment = 1

[node name="SuitLabel" type="Label" parent="TopVbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m4keo")
text = "♠"
horizontal_alignment = 1

[node name="BottomVbox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
rotation = 3.14159
mouse_filter = 2
theme_override_constants/separation = 0

[node name="RankLabel" type="Label" parent="BottomVbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_kj1rw")
theme_override_font_sizes/font_size = 14
text = "A"
horizontal_alignment = 1

[node name="SuitLabel" type="Label" parent="BottomVbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m4keo")
text = "♠"
horizontal_alignment = 1
